Update to the CTA. Make it prettier / more focused.

--- a/scss/campus.scss
+++ b/scss/campus.scss
@@ -71,6 +71,7 @@
 }
 
 .post-fb-text {
+    text-align: center;
     margin-top: 15px;
     margin-bottom: 15px;
 }
@@ -90,4 +91,10 @@
 
 .how-who-whr {
     padding-bottom: 5px;
+}
+
+.fb-container {
+    padding-top: 5px;
+    width: 290px;
+    margin: 0 auto;
 }
