--- a/css/styles.css
+++ b/css/styles.css
@@ -1036,6 +1036,7 @@ HELPER CLASSES
   margin-bottom: 10px; }
 
 .post-fb-text {
+  text-align: center;
   margin-top: 15px;
   margin-bottom: 15px; }
 
@@ -1052,6 +1053,11 @@ HELPER CLASSES
 
 .how-who-whr {
   padding-bottom: 5px; }
+
+.fb-container {
+  padding-top: 5px;
+  width: 290px;
+  margin: 0 auto; }
 
 button {
   position: relative;
@@ -1110,6 +1116,11 @@ SHARE
   height: 25px;
   display: inline; }
 
+.facebook-button-r2v {
+  margin-top: -3px;
+  height: 44px;
+  display: inline; }
+
 .navbar-facebook-button-text {
   display: inline;
   margin-top: -7px;
@@ -1132,7 +1143,8 @@ SHARE
   -webkit-box-shadow: inset 0 -2px #344a78;
   box-shadow: inset 0 -2px #344a78;
   border-bottom: 2px solid #344a78;
-  margin-top: 25px; }
+  margin-top: 20px;
+  margin-bottom: 25px; }
 
 .share-instructions {
   width: 180px;
