--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -77,6 +77,12 @@ SHARE
     display: inline;
 }
 
+.facebook-button-r2v {
+    margin-top: -3px;
+    height: 44px;
+    display: inline;
+}
+
 .navbar-facebook-button-text {
     display: inline;
     margin-top: -7px;
@@ -107,7 +113,8 @@ SHARE
     -webkit-box-shadow: inset 0 -2px $facebook-blue-shadow;
     box-shadow: inset 0 -2px $facebook-blue-shadow;
     border-bottom: 2px solid $facebook-blue-shadow;
-    margin-top: 25px;
+    margin-top: 20px;
+    margin-bottom: 25px;
 }
 
 .share-instructions {
